--- a/Infinigent_ClientFeednback/Web.config
+++ b/Infinigent_ClientFeednback/Web.config
@@ -5,9 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="dbCon" connectionString="Data Source=202.126.122.85,9025; Initial Catalog=qt_Infinigent_Feedback;User Id=sa; Password=iWZaZRkYZnX2YK90iDhiZURcr; Connect Timeout=90;" providerName="System.Data.SqlClient" />
-    
-  <add name="qt_Infinigent_FeedbackEntities" connectionString="metadata=res://*/Models.ClientFeedbackEntity.csdl|res://*/Models.ClientFeedbackEntity.ssdl|res://*/Models.ClientFeedbackEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=202.126.122.85,9025;initial catalog=qt_Infinigent_Feedback;persist security info=True;user id=sa;password=iWZaZRkYZnX2YK90iDhiZURcr;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="dbCon" connectionString="Data Source=202.126.122.85,9025; Initial Catalog=qt_Infinigent_Feedback;User Id=sa; Password=iWZaZRkYZnX2YK90iDhiZURcr; Connect Timeout=90;" providerName="System.Data.SqlClient" /><add name="qt_Infinigent_FeedbackEntities" connectionString="metadata=res://*/Models.ClientFeedbackEntity.csdl|res://*/Models.ClientFeedbackEntity.ssdl|res://*/Models.ClientFeedbackEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=202.126.122.85,9025;initial catalog=qt_Infinigent_Feedback;persist security info=True;user id=sa;password=iWZaZRkYZnX2YK90iDhiZURcr;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="qt_Infinigent_FeedbackEntities1" connectionString="metadata=res://*/Models.ClientFeedbackEntity.csdl|res://*/Models.ClientFeedbackEntity.ssdl|res://*/Models.ClientFeedbackEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=202.126.122.85,9025;initial catalog=qt_Infinigent_Feedback;persist security info=True;user id=sa;password=iWZaZRkYZnX2YK90iDhiZURcr;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
